--- a/xorg/xorg-sessreg/PKGBUILD
+++ b/xorg/xorg-sessreg/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-sessreg
 pkgver=1.1.2
 pkgrel=2
 pkgdesc="Register X sessions in system utmp/utmpx databases"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('glibc')
