--- a/xorg/xorg-xclock/PKGBUILD
+++ b/xorg/xorg-xclock/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xclock
 pkgver=1.0.9
 pkgrel=2
 pkgdesc="X clock"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxmu' 'libxaw' 'libxrender' 'libxft' 'libxkbfile')
