--- a/xorg/xorg-xbiff/PKGBUILD
+++ b/xorg/xorg-xbiff/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xbiff
 pkgver=1.0.4
 pkgrel=2
 pkgdesc="Watch mailboxes for new message delivery"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxaw' 'libxext')
