--- a/xorg/xorg-xbacklight/PKGBUILD
+++ b/xorg/xorg-xbacklight/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xorg-xbacklight
 pkgver=1.2.3
 pkgrel=2
 pkgdesc="RandR-based backlight control application"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('xcb-util')
