--- a/xorg/xorg-smproxy/PKGBUILD
+++ b/xorg/xorg-smproxy/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-smproxy
 pkgver=1.0.6
 pkgrel=3
 pkgdesc="Allows X applications that do not support X11R6 session management to participate in an X11R6 session"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libsm' 'libxt' 'libxmu')
@@ -18,7 +18,7 @@ validpgpkeys=('4A193C06D35E7C670FA4EF0BA2FB9E081F2D130E') # Alan Coopersmith <al
 
 build() {
   cd smproxy-${pkgver}
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
