--- a/xorg/xorg-oclock/PKGBUILD
+++ b/xorg/xorg-oclock/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-oclock
 pkgver=1.0.4
 pkgrel=2
 pkgdesc="Round X clock"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxmu' 'libxext' 'libxkbfile')
