--- a/cross-compilers/riscv64-unknown-linux-gnu-glibc-headers/PKGBUILD
+++ b/cross-compilers/riscv64-unknown-linux-gnu-glibc-headers/PKGBUILD
@@ -8,7 +8,7 @@
 
 _target=riscv64-unknown-linux-gnu
 pkgname=${_target}-glibc-headers
-pkgver=2.34
+pkgver=2.35
 pkgrel=1
 pkgdesc="GNU C Library headers (${_target})"
 arch=('any')
@@ -20,16 +20,14 @@ options=(!buildflags !strip staticlibs)
 source=(https://ftp.gnu.org/gnu/glibc/glibc-$pkgver.tar.xz{,.sig}
         sdt-config.h
         sdt.h
-        Add-C.UTF-8-locale.patch
-        Revert-sysdeps-posix-getaddrinfo.c-gaih_inet-Only-us.patch)
+	disable-clone3.diff)
 validpgpkeys=(7273542B39962DF7B299931416792B4EA25340F8 # Carlos O'Donell
               BC7C7372637EC10C57D7AA6579C43DFBF1CF2187) # Siddhesh Poyarekar
-sha256sums=('44d26a1fe20b8853a48f470ead01e4279e869ac149b195dda4e44a195d981ab2'
+sha256sums=('5123732f6b67ccd319305efd399971d58592122bcc2a6518a1bd2510dd0cf52e'
             'SKIP'
             'cdc234959c6fdb43f000d3bb7d1080b0103f4080f5e67bcfe8ae1aaf477812f0'
             '774061aff612a377714a509918a9e0e0aafce708b87d2d7e06b1bd1f6542fe70'
-            '69aaac9e1940131348b804bde15e7ccfa7230dcd0c2e1c7c44ca93f7e3f1c6c7'
-            '44e77b0e01b3aaeef6e16c5171be6e834b56f5283041af0f223c2b8785a2b6cd')
+            'f5df8fc95592cce7825744aeb8c9699a5b4b5b7ccf7bcf554355167c3a7e375e')
 
 prepare() {
   mkdir -p glibc-build
