--- a/xorg/libxvmc/PKGBUILD
+++ b/xorg/libxvmc/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=libxvmc
 pkgver=1.0.12
 pkgrel=3
 pkgdesc="X11 Video Motion Compensation extension library"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxext')
