--- a/xfce4/libxfce4util/PKGBUILD
+++ b/xfce4/libxfce4util/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=libxfce4util
 pkgver=4.16.0
 pkgrel=1
 pkgdesc="Basic utility non-GUI functions for Xfce"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.xfce.org/"
 license=('GPL2')
 depends=('glib2')
