--- a/xfce4/xfconf/PKGBUILD
+++ b/xfce4/xfconf/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xfconf
 pkgver=4.16.0
 pkgrel=2
 pkgdesc="Flexible, easy-to-use configuration management system"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/xfce/xfconf/start"
 license=('GPL2')
 groups=('xfce4')
