--- a/xfce4/exo/PKGBUILD
+++ b/xfce4/exo/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=exo
 pkgver=4.16.3
 pkgrel=1
 pkgdesc="Application library for Xfce"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.xfce.org/"
 license=('GPL2' 'LGPL')
 groups=('xfce4')
