--- a/xfce4/garcon/PKGBUILD
+++ b/xfce4/garcon/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=garcon
 pkgver=4.16.1
 pkgrel=1
 pkgdesc="Implementation of the freedesktop.org menu specification"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.xfce.org/"
 license=('LGPL')
 groups=('xfce4')
