--- a/gnome/gspell/PKGBUILD
+++ b/gnome/gspell/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.8.4
 pkgrel=1
 pkgdesc="a flexible API to implement the spell checking in a GTK+ application"
 url="https://wiki.gnome.org/Projects/gspell"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL2)
 depends=(gtk3 enchant libxml2 iso-codes)
 makedepends=(gobject-introspection vala gtk-doc autoconf-archive git)
