--- a/gnome/gtksourceview4/PKGBUILD
+++ b/gnome/gtksourceview4/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=4.8.2
 pkgrel=1
 pkgdesc="A text widget adding syntax highlighting and more to GNOME"
 url="https://wiki.gnome.org/Projects/GtkSourceView"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL)
 depends=(gtk3 libxml2)
 makedepends=(gobject-introspection vala gtk-doc glade yelp-tools git meson)
