--- a/xfce4/xfce4-terminal/PKGBUILD
+++ b/xfce4/xfce4-terminal/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-terminal
 pkgver=0.8.10
 pkgrel=2
 pkgdesc="A modern terminal emulator primarily for the Xfce desktop environment"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/apps/terminal/start"
 license=('GPL2')
 groups=('xfce4')
