--- a/libxklavier/PKGBUILD
+++ b/libxklavier/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=libxklavier
 pkgver=5.4
 pkgrel=3
 pkgdesc="High-level API for X Keyboard Extension"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('LGPL')
 depends=('glib2' 'libxkbfile' 'libxml2' 'xkeyboard-config' 'libxi' 'iso-codes')
 makedepends=('gobject-introspection' 'intltool' 'gtk-doc' 'libxfixes' git)
