--- a/xfce4/xfce4-xkb-plugin/PKGBUILD
+++ b/xfce4/xfce4-xkb-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-xkb-plugin
 pkgver=0.8.2
 pkgrel=1
 pkgdesc="Plugin to switch keyboard layouts for the Xfce4 panel"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/panel-plugins/xfce4-xkb-plugin"
 license=('custom')
 groups=('xfce4-goodies')
