--- a/xfce4/xfce4-dev-tools/PKGBUILD
+++ b/xfce4/xfce4-dev-tools/PKGBUILD
@@ -7,7 +7,8 @@ pkgname=xfce4-dev-tools
 pkgver=4.16.0
 pkgrel=1
 pkgdesc="Xfce developer tools"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="https://www.xfce.org/"
 license=('GPL2')
 depends=('glib2' 'intltool' 'gtk-doc')
