--- a/xfce4/xfce4-battery-plugin/PKGBUILD
+++ b/xfce4/xfce4-battery-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-battery-plugin
 pkgver=1.1.4
 pkgrel=1
 pkgdesc="A battery monitor plugin for the Xfce panel"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 url="https://docs.xfce.org/panel-plugins/xfce4-battery-plugin"
 groups=('xfce4-goodies')
