--- a/xfce4/xfce4-datetime-plugin/PKGBUILD
+++ b/xfce4/xfce4-datetime-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-datetime-plugin
 pkgver=0.8.1
 pkgrel=1
 pkgdesc="A date and time display plugin for the Xfce panel"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 url="https://docs.xfce.org/panel-plugins/xfce4-datetime-plugin"
 groups=('xfce4-goodies')
