--- a/xfce4/xfce4-diskperf-plugin/PKGBUILD
+++ b/xfce4/xfce4-diskperf-plugin/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Aurelien Foret <orelien@chez.com>
 
 pkgname=xfce4-diskperf-plugin
-pkgver=2.6.3
+pkgver=2.7.0
 pkgrel=1
-pkgdesc="Plugin for the Xfce4 panel displaying instant disk/partition performance"
-arch=( x86_64 powerpc64le powerpc )
+pkgdesc="Displays instant disk/partition performance in the Xfce4 panel"
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('BSD')
 url="https://docs.xfce.org/panel-plugins/xfce4-diskperf-plugin"
 groups=('xfce4-goodies')
 depends=('xfce4-panel')
 makedepends=('intltool')
 source=(https://archive.xfce.org/src/panel-plugins/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2)
-sha256sums=('73b1ea2deb2403287337e8521d21345fb2f88445f9030732fa28f1bfa5d51c59')
+sha256sums=('5909a65341a6af4d7ff3c7bb87aeac91c763f69b43ae9dc4a10668ac226fecc9')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
