--- a/xfce4/xfce4-dict/PKGBUILD
+++ b/xfce4/xfce4-dict/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-dict
 pkgver=0.8.4
 pkgrel=1
 pkgdesc="A dictionary plugin for the Xfce panel"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/apps/xfce4-dict/start"
 license=('GPL2')
 groups=('xfce4-goodies')
