--- a/xfce4/xfce4-eyes-plugin/PKGBUILD
+++ b/xfce4/xfce4-eyes-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-eyes-plugin
 pkgver=4.5.1
 pkgrel=1
 pkgdesc="A rolling eyes (following mouse pointer) plugin for the Xfce panel"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/panel-plugins/xfce4-eyes-plugin"
 license=('GPL2')
 groups=('xfce4-goodies')
