--- a/xfce4/xfce4-fsguard-plugin/PKGBUILD
+++ b/xfce4/xfce4-fsguard-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-fsguard-plugin
 pkgver=1.1.2
 pkgrel=1
 pkgdesc="File system usage monitor plugin for the Xfce4 panel"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 url="https://docs.xfce.org/panel-plugins/xfce4-fsguard-plugin"
 groups=('xfce4-goodies')
