--- a/xfce4/xfce4-genmon-plugin/PKGBUILD
+++ b/xfce4/xfce4-genmon-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-genmon-plugin
 pkgver=4.1.1
 pkgrel=1
 pkgdesc="plugin that monitors customizable programs stdout for the Xfce4 panel"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('LGPL2.1')
 url="https://docs.xfce.org/panel-plugins/xfce4-genmon-plugin"
 groups=('xfce4-goodies')
