--- a/xfce4/xfce4-mailwatch-plugin/PKGBUILD
+++ b/xfce4/xfce4-mailwatch-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-mailwatch-plugin
 pkgver=1.3.0
 pkgrel=1
 pkgdesc="Multi-protocol, multi-mailbox mail watcher for the Xfce4 panel"
-arch=( x86_64 powerpc64le powerpc )
+arch=( x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/panel-plugins/xfce4-mailwatch-plugin"
 license=('GPL2')
 groups=('xfce4-goodies')
