--- a/xfce4/xfce4-mount-plugin/PKGBUILD
+++ b/xfce4/xfce4-mount-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-mount-plugin
 pkgver=1.1.5
 pkgrel=1
 pkgdesc="Mount/umount utility for the Xfce4 panel"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/panel-plugins/xfce4-mount-plugin"
 license=('GPL')
 groups=('xfce4-goodies')
