--- a/xfce4/xfce4-notes-plugin/PKGBUILD
+++ b/xfce4/xfce4-notes-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-notes-plugin
 pkgver=1.9.0
 pkgrel=1
 pkgdesc="Notes plugin for the Xfce panel"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 url="https://docs.xfce.org/panel-plugins/xfce4-notes-plugin"
 groups=('xfce4-goodies')
