--- a/upower/PKGBUILD
+++ b/upower/PKGBUILD
@@ -1,9 +1,9 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
-# Maintainer: Jan de Groot <jgc@archlinux.org>
+# Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=upower
-pkgver=0.99.15
+pkgver=0.99.17
 pkgrel=1
 pkgdesc="Abstraction for enumerating power devices, listening to device events and querying history and statistics"
 url="https://upower.freedesktop.org"
@@ -13,13 +13,9 @@ depends=(systemd libimobiledevice libgudev)
 makedepends=(docbook-xsl gobject-introspection python git gtk-doc meson)
 checkdepends=(python-{dbus,dbusmock,gobject} umockdev)
 backup=(etc/UPower/UPower.conf)
-_commit=e4a8656521775a67e099a5a784364c2d2fd51a4a  # tags/v0.99.15^0
-source=("git+https://gitlab.freedesktop.org/upower/upower.git#commit=$_commit"
-        0001-build-Fix-default-udevrulesdir.patch
-        0002-build-Fix-version-macros.patch)
-sha256sums=('SKIP'
-            '8891e9baddca739f41a9323da94fd38c61f42e9267b0b42597f69fb3f4d8bf69'
-            '68a916b1058dcc7b21e8e7568e6998bf929bb586b94500124739c1059107e256')
+_commit=c889154ec8e3e2239db9260d48b2e198d72ba002  # tags/v0.99.17^0
+source=("git+https://gitlab.freedesktop.org/upower/upower.git#commit=$_commit")
+sha256sums=('SKIP')
 
 pkgver() {
   cd upower
@@ -28,10 +24,6 @@ pkgver() {
 
 prepare() {
   cd upower
-
-  # meson fixes
-  git apply -3 ../0001-build-Fix-default-udevrulesdir.patch
-  git apply -3 ../0002-build-Fix-version-macros.patch
 }
 
 build() {
