--- a/base/PKGBUILD
+++ b/base/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=base
 pkgver=4
-pkgrel=1
+pkgrel=2
 pkgdesc='Minimal package set to define a basic Arch Linux installation'
 url='https://www.archlinux.org'
 arch=('powerpc64le' 'powerpc' 'riscv64')
@@ -28,7 +28,8 @@ depends=(
 )
 
 case "${CARCH}" in
-  powerpc*) depends+=('powerpc-utils') ;;
+  powerpc64le) depends+=('powerpc-utils') ;;
+  powerpc) depends+=('powerpc-utils' 'mac-fdisk' 'hfsutils') ;;
 esac
 
 optdepends=('linux: bare metal support')
