--- a/qt5/qt5-script/PKGBUILD
+++ b/qt5/qt5-script/PKGBUILD
@@ -3,9 +3,9 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt5-script
-_qtver=5.15.8
-pkgver=${_qtver/-/}
-pkgrel=2
+_basever=5.15.3
+pkgver=5.15.8
+pkgrel=4
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
@@ -16,7 +16,7 @@ groups=('qt' 'qt5')
 _pkgfqn=${pkgname/5-/}
 source=(git+https://code.qt.io/qt/$_pkgfqn.git#tag=v${pkgver}-lts)
 sha256sums=('SKIP')
-options=(!lto)
+options=(!lto debug)
 
 prepare() {
   mkdir -p build
@@ -42,5 +42,5 @@ package() {
   ln -s /usr/share/licenses/qt5-base "$pkgdir"/usr/share/licenses/${pkgname}
 
   # Fix cmake dependency versions
-  sed -e "s|$pkgver\ |5.15.2 |" -i "$pkgdir"/usr/lib/cmake/*/*Config.cmake
+  sed -e "s|$pkgver\ |$_basever |" -i "$pkgdir"/usr/lib/cmake/*/*Config.cmake
 }
