--- a/assimp/PKGBUILD
+++ b/assimp/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: jepaan <jepaan at hotmail dot com>
 
 pkgname=assimp
-pkgver=5.2.0
+pkgver=5.2.2
 pkgrel=1
 pkgdesc="Library to import various well-known 3D model formats in an uniform manner"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -14,14 +14,14 @@ url='https://assimp.org/'
 source=("$pkgname-$pkgver.tar.gz::https://github.com/assimp/assimp/archive/${pkgver}.tar.gz"
 	disable-werror.patch
         "$pkgname-$pkgver-byteswap-macros.patch::https://patch-diff.githubusercontent.com/raw/assimp/assimp/pull/4367.patch")
-sha512sums=('fe57e528520843747e5299f7f66418f3186a8a581d1b2822f2bdeaa331c6a970cb2ce65b492f7ae60b949d321b342dc9948cebd657727447b35ad8317c058431'
+sha512sums=('7f11f3e53bdcd43a81be49ce2ad90d97769ae1c3c6157f57e8a0b2b41c72f394ad1afcdc5f5fa6fbfa1a44233fed4b9a578d5548ec5b9aae2113ef88c2ec843a'
             '3c899b80df3db3e6e336913b0ccd7cf95552c30d378664e3b53c278d72ddf61084f01f642e09be65b39ab83115a4cf0eb9a695d648b7c3151f3466aacc31f811'
             'a3455bea1a4f0f2b5f7dba71b01a58de72419a0449194a9e0577db5f1a8b09b92c36c815f7a64b26293523084a9d1313460bc9d3f6c100d995ab87d89b45c37b')
 
 prepare() {
   cd ${pkgname}-${pkgver}
   patch -Np1 -i ${srcdir}/disable-werror.patch
-  patch -Np1 -i ${srcdir}/${pkgname}-${pkgver}-byteswap-macros.patch
+  #patch -Np1 -i ${srcdir}/${pkgname}-${pkgver}-byteswap-macros.patch
 }
 
 build() {
