--- a/php/PKGBUILD
+++ b/php/PKGBUILD
@@ -21,26 +21,26 @@ pkgname=('php'
          'php-sqlite'
          'php-tidy'
          'php-xsl')
-pkgver=8.0.11
-pkgrel=2
-arch=(x86_64 powerpc64le powerpc)
+pkgver=8.1.3
+pkgrel=1
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('PHP')
 url='https://www.php.net/'
-makedepends=('apache' 'aspell' 'c-client' 'db' 'enchant' 'gd' 'gmp' 'icu' 'libsodium' 'libxslt' 'libzip' 'net-snmp'
+makedepends=('apache' 'aspell' 'c-client' 'db' 'gdbm' 'enchant' 'gd' 'gmp' 'icu' 'libsodium' 'libxslt' 'libzip' 'net-snmp'
              'postgresql-libs' 'sqlite' 'systemd' 'tidy' 'unixodbc' 'curl' 'libtool' 'postfix' 'freetds' 'pcre2' 'libnsl'
              'oniguruma')
 checkdepends=('procps-ng')
 source=("https://php.net/distributions/${pkgbase}-${pkgver}.tar.xz"{,.asc}
         'apache.patch' 'apache.conf' 'php-fpm.patch' 'php-fpm.tmpfiles' 'php.ini.patch')
-sha256sums=('e3e5f764ae57b31eb65244a45512f0b22d7bef05f2052b23989c053901552e16'
+sha256sums=('5d65a11071b47669c17452fb336c290b67c101efb745c1dbe7525b5caf546ec6'
             'SKIP'
             '702b163c66c65af92dcad8d79f41bda84bcd5d863235fcf1497c33a86db9e4ca'
             '4a2add00d93fa991ccdf6356090264c1059c79935642afff6e8d4a2107fa037e'
-            '2228131cc65139bd819b617bba06c2406e559c55fbfb38a29f9853ce48c58eeb'
+            'aa55fa4fc5c2b2493065bbd00cfe3c97a1b22b3dc7d34f8fd303de18cafe844f'
             '640dba0d960bfeaae9ad38d2826d3f6b5d6c175a4d3e16664eefff29141faad5'
-            'b538a7c974adde626c35481e4a66d506dc12c598f369dfe79f3fcb9585d8b920')
-validpgpkeys=('1729F83938DA44E27BA0F4D3DBDB397470D12172'
-              'BFDDD28642824F8118EF77909B67A5C12229118F')
+            'b3b3385f1c36e272671c7db238b2a69896e11a82db90dafd74964f2eabbfa2f2')
+validpgpkeys=('F1F692238FBC1666E5A5CCD4199F9DFEF6FFBAFD'
+              '39B641343D8C104B2B146DC3F9C39DC0B9698544')
 
 prepare() {
 	cd "${srcdir}/${pkgbase}-${pkgver}"
@@ -67,6 +67,7 @@ build() {
 		--with-config-file-scan-dir=/etc/php/conf.d \
 		--disable-rpath \
 		--mandir=/usr/share/man \
+		--disable-gcc-global-regs \
 		"
 
 	local _phpextensions="\
@@ -177,7 +178,7 @@ check() {
 
 package_php() {
 	pkgdesc='A general-purpose scripting language that is especially suited to web development'
-	depends=('libxml2' 'curl' 'libzip' 'pcre2' 'argon2' 'oniguruma')
+	depends=('libxml2' 'curl' 'libzip' 'pcre2' 'argon2' 'oniguruma' 'db' 'gdbm')
 	replaces=('php-ldap')
 	conflicts=('php-ldap')
 	provides=("php-ldap=${pkgver}")
