--- a/dialog/PKGBUILD
+++ b/dialog/PKGBUILD
@@ -5,19 +5,19 @@
 # Contributor: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=dialog
-pkgver=1.3_20210621
+pkgver=1.3_20220117
 pkgrel=1
 epoch=1
 pkgdesc="A tool to display dialog boxes from shell scripts"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://invisible-island.net/dialog/"
 license=('LGPL2.1')
 depends=('sh' 'ncurses')
 provides=('libdialog.so')
 source=(https://invisible-mirror.net/archives/$pkgname/$pkgname-${pkgver/_/-}.tgz{,.asc})
-sha256sums=('c3af22ccfcd9baca384062108dd9354e86990929ee270c239eef69518c5da7c8'
+sha256sums=('754cb6bf7dc6a9ac5c1f80c13caa4d976e30a5a6e8b46f17b3bb9b080c31041f'
             'SKIP')
-validpgpkeys=('C52048C0C0748FEE227D47A2702353E0F7E48EDB') # Thomas Dickey <dickey@invisible-island.net>
+validpgpkeys=('19882D92DDA4C400C22C0D56CC2AF4472167BE03') # Thomas E. Dickey (self-signed w/o SHA1) <dickey@invisible-island.net>
 
 build() {
   cd "$srcdir/$pkgname-${pkgver/_/-}"
