--- a/bluez/PKGBUILD
+++ b/bluez/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgbase=bluez
 pkgname=('bluez' 'bluez-utils' 'bluez-libs' 'bluez-cups' 'bluez-hid2hci' 'bluez-plugins')
-pkgver=5.63
+pkgver=5.64
 pkgrel=2
 url="http://www.bluez.org/"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -15,28 +15,12 @@ options=('debug')
 makedepends=('dbus' 'libical' 'systemd' 'alsa-lib' 'json-c' 'ell' 'python-docutils')
 source=(https://www.kernel.org/pub/linux/bluetooth/${pkgname}-${pkgver}.tar.{xz,sign}
         bluetooth.modprobe
-        0001-hog-Fix-read-order-of-attributes.patch
-        0002_Fix_crash_when_endpoint_replies_with_an_error_to_SetConfiguration.patch
-        0003_gdbus_Emit_InterfacesAdded_of_parents_objects_first.patch
 )
 # see https://www.kernel.org/pub/linux/bluetooth/sha256sums.asc
-sha256sums=('9349e11e8160bb3d720835d271250d8a7424d3690f5289e6db6fe07cc66c6d76'
+sha256sums=('ae437e65b6b3070c198bc5b0109fe9cdeb9eaa387380e2072f9de65fe8a1de34'
             'SKIP'
-            '46c021be659c9a1c4e55afd04df0c059af1f3d98a96338236412e449bf7477b4'
-            'a942678ae22274c22f131c492dc3f38791be8e10a70adcbaa0cebb8017bf71ff'
-            'bd105b64979380850d00fb085896fcaf84909c7938a03b0d2ea6d981cb55aeb1'
-            '1613c63c96084368d0533027368ccc3affea5695bb3d93126ceb25dabc1b5c4b')
+            '46c021be659c9a1c4e55afd04df0c059af1f3d98a96338236412e449bf7477b4')
 validpgpkeys=('E932D120BC2AEC444E558F0106CA9F5D1DCF2659') # Marcel Holtmann <marcel@holtmann.org>
-
-prepare() {
-  cd "${pkgname}"-${pkgver}
-  #  FS#73236 / https://github.com/bluez/bluez/issues/220
-  patch -Np1 -i ../0001-hog-Fix-read-order-of-attributes.patch
-  # FS#73394 / https://github.com/bluez/bluez/issues/272 https://github.com/bluez/bluez/issues/269
-  patch -Np1 -i ../0002_Fix_crash_when_endpoint_replies_with_an_error_to_SetConfiguration.patch
-  # https://github.com/bluez/bluez/issues/284
-  patch -Np1 -i ../0003_gdbus_Emit_InterfacesAdded_of_parents_objects_first.patch
-}
 
 build() {
   cd "${pkgname}"-${pkgver}
@@ -59,8 +43,7 @@ build() {
 
 check() {
   cd "$pkgname"-$pkgver
-  # tests segfault and hang
-#  make check || /bin/true # https://bugzilla.kernel.org/show_bug.cgi?id=196621
+  make check
 }
 
 
@@ -97,6 +80,9 @@ package_bluez() {
   
   # fix obex file transfer - https://bugs.archlinux.org/task/45816
   ln -fs /usr/lib/systemd/user/obex.service "${pkgdir}"/usr/lib/systemd/user/dbus-org.bluez.obex.service
+
+  # FS#74157 - bluez systemd service fails without localstatedir present
+  install -dm700 "${pkgdir}"/var/lib/bluetooth
 }
 
 package_bluez-utils() {
